<resources>

    /* -----------------Login Activity----------------- */
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid mail</string>
    <string name="invalid_password">Password must be at least of 5 characters</string>
    <string name="login_failed_title">Error</string>
    <string name="login_failed_400">Error#LF400. Please report to the developers.</string>
    <string name="login_failed_401">Username or password are wrong, try again.</string>
    <string name="login_failed_500">An error occurred, please try again.</string>
    <string name="login_failed_unknown">Unknown error, report to the developers. Error#LF</string>

    /* -----------------Main Activity----------------- */
    <string name="app_name" translatable="false">CDT</string>
    <string name="app_name_extended" translatable="false">Citizen Digital Twin</string>
    <string name="title_home">You</string>
    <string name="title_devices">Your Devices</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="category_icon">Category icon</string>
    <string name="category_name">Category name</string>
    <string name="category_arrow">Expand category</string>
    <string name="message_sent">has sent you a message</string>
    <string name="data_change">has updated the following data</string>
    <string name="notification_icon">Notification icon</string>
    <string name="no_notifications_message">You have no notifications</string>
    <string name="no_devices_message">You have no connected devices</string>
    <string name="disconnect_device">Disconnect</string>
    <string name="device_icon">Device icon</string>
    <string name="welcome_back">Welcome back</string>
    <string name="no_data_available">No data for this category</string>
    <string name="connect_device_title">Connect to a Health Device</string>
    <string name="connect_device_text">Choose a device to connect to among the ones shown.</string>
    <string name="paired_devices_title">Paired devices</string>
    <string name="discovered_devices_title">Discovered devices</string>
    <string name="device_type_icon">Device Type icon</string>
    <string name="device_name_not_found">Device name not found</string>
    <string name="add_device_text">Please type the model of the device that you have selected</string>
    <string name="add_device_hint">Device model</string>
    <string name="add_device_title">Insert device model</string>
    <string name="add_device_positive">Connect</string>
    <string name="add_device_error_text">This field must contain at least one character</string>
    <string name="connection_failed">The connection with the device has failed, try again.</string>
    <string name="unhandled_device">The device is not handled by the system, please submit your device for future developments.</string>
    <string name="connection_success">The connection has been established!.</string>
    <string name="disconnection_failed">The disconnection from the device has failed, try again.</string>
    <string name="expand_item">Expand element</string>
    <string name="feeder_text">Produced by</string>
    <string name="date_text">In date</string>

    /* -----------------Leaf categories----------------- */
    <string name="LC_name">Name</string>
    <string name="LC_surname">Surname</string>
    <string name="LC_birthdate">Birth Date</string>
    <string name="LC_address">Address</string>
    <string name="LC_celsius_temperature">Body Temperature</string>
    <string name="LC_blood_oxigen">Blood Oxygen</string>
    <string name="LC_heart_rate">Heart Rate</string>
    <string name="LC_cf">Tax Code</string>
    <string name="LC_medical_record">Medical Record</string>
    <string name="LC_position">Last known position</string>

    /* -----------------Group categories----------------- */
    <string name="GC_medical_data">Medical Data</string>
    <string name="GC_location">Location</string>
    <string name="GC_personal_data">Personal Data</string>
    <string name="GC_licences">Your Licences</string>
    <string name="GC_legal_data">Legal Data</string>

    /* -----------------Communication standard----------------- */
    <string name="value">Value</string>
    <string name="um">Unit of measure</string>
    <string name="lat">Latitude</string>
    <string name="lng">Longitude</string>

</resources>
